# thai-horoscope-platform

./: .env.example  .gitignore  .socraticode.json  .socraticodecontextartifacts.json  AGENTS.md  README.md  package.json  pnpm-lock.yaml
.hermes/: MISSION_MVP.md
docs/: AGENTS_APPENDIX_CODEX_AUTOMATION.md  ARCHITECTURE.md  ASTRO_CALCULATION.md  ASTRO_KNOWN_LIMITATIONS.md  ASTRO_OPERATOR_RUNBOOK.md  ASTRO_RELEASE_READINESS_CHECKLIST.md  BETA_CONTENT_APPROVAL.md  BETA_DRY_RUN_REPORT.md  BETA_FEEDBACK_GUIDE.md  BETA_GO_NO_GO_EXECUTION_RECORD.md  BETA_INVITE_MANAGEMENT.md  BETA_LAUNCH_CONTENT.md  BETA_LAUNCH_CONTENT_PACK.md  BETA_LAUNCH_EXECUTION_LOG.md  BETA_LAUNCH_PLAN.md  BETA_RC1_EXECUTION_RESULTS.md  BETA_RC1_GO_NO_GO_DECISION.md  BETA_RC1_SMOKE_TEST_RESULTS.md  BETA_RELEASE_CANDIDATE.md  BETA_RELEASE_NOTES.md  BETA_RELEASE_NOTES_TEMPLATE.md  BETA_SMOKE_TESTS.md  BETA_SUPPORT_AND_FEEDBACK.md  BETA_SUPPORT_TEMPLATES.md  BETA_USER_FAQ.md  CODEX_AUTOMATION_RUNBOOK.md  (+46 more)
services/astro-calc/: README.md  pyproject.toml
services/astro-calc/app/: __init__.py  config.py  main.py  schemas.py
services/astro-calc/app/core/: __init__.py  aspects.py  calculators.py  math.py  observability.py  profiles.py  storage.py  thai_lagna.py  time.py  zodiac.py
services/astro-calc/app/engines/: __init__.py  base.py  factory.py  mock.py  swisseph.py
services/astro-calc/tests/: test_astro_core.py  test_contract_schema.py  test_golden.py  test_http_service.py  test_observability.py
services/astro-calc/tests/golden/: gc001_natal_bangkok_known_time.json  gc002_thai_almanac_reference.json
(+99 files in other folders)
